--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
-loader_version=0.14.22
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.14.23
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+maven_group=ru.littleligr
+archives_base_name=status-effect-api
 
 # Dependencies
-fabric_version=0.89.1+1.20.2
+fabric_version=0.90.0+1.20.1
